--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,python,visualstudiocode
+zNex~$harepart_list.csv
